# SatisfactoryPlanner

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
include/Core/: FactoryPrinter.h  GameDatabase.h  ProductionPlanner.h
include/Import/: RecipeParser.h
include/Models/: FactoryGraph.h  Item.h  ItemRate.h  MachineConnection.h  ProductionMachine.h  ProductionNode.h  Recipe.h
src/: main.cpp
src/Core/: FactoryPrinter.cpp  GameDatabase.cpp  ProductionPlanner.cpp
